--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,11 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #FFD000;
+  min-height: 94vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: center; 
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -20,3 +19,18 @@
 .App-link {
   color: #09d3ac;
 }
+
+input {
+  margin: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 30px;
+  width: 50%;
+  height: 70px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, .10);
+}
+
+
