--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.App {
+  text-align: center;
+}
+
+.App-header {
+  background-color: #EBF5EE;
+  min-height: 94vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  color: black;
+}
+
+.App-link {
+  color: #09d3ac;
+}
+
+input {
+  margin: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 30px;
+  width: 50%;
+  height: 70px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, .10);
+}
+
+h1 {
+  padding-bottom: 0px;
+}
+
+p {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
